--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,279 @@
-/* line 3, C:/wamp64/www/prove-eksamen/css/style.scss */
+html,
 body {
-  width: 100%;
-  background-color: #e69500;
-  height: 100%; }
-  /* line 7, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body .really {
-    background-color: red; }
-  /* line 10, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body .realy {
-    color: red; }
-  /* line 13, C:/wamp64/www/prove-eksamen/css/style.scss */
+  width: 95%;
+  background-color: #F2AB52;
+  height: 100vw;
+  margin: 0 auto; }
+  html #wrapper,
   body #wrapper {
     width: 100%;
-    height: 100%; }
-    /* line 16, C:/wamp64/www/prove-eksamen/css/style.scss */
+    height: 100vw; }
+    html #wrapper #header,
     body #wrapper #header {
       width: 100%; }
-      /* line 18, C:/wamp64/www/prove-eksamen/css/style.scss */
+      html #wrapper #header .header-bg,
       body #wrapper #header .header-bg {
         margin-top: 1%;
-        background: url(HearthStone_Logo_2016_m011.png);
+        background: url(HearthStone_Logo_2016_m011.png), linear-gradient(#F2AB52, #f3b05b);
         height: 400px;
         width: 100%;
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: center; }
-        /* line 26, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #header .header-bg .title {
-          text-align: center;
-          color: darkorange; }
-      /* line 31, C:/wamp64/www/prove-eksamen/css/style.scss */
+      html #wrapper #header .nav,
       body #wrapper #header .nav {
+        background: linear-gradient(#e68811, #ce7a10), url(hearth-feature.jpg);
         display: flex;
-        width: 100%;
+        width: 98%;
+        border-radius: 5px;
+        margin: 10px auto;
+        padding-top: 20px;
+        border: 2px solid black;
         flex-wrap: wrap;
         justify-content: space-around;
-        line-height: 50px; }
-        /* line 37, C:/wamp64/www/prove-eksamen/css/style.scss */
+        line-height: 25px; }
+        html #wrapper #header .nav .li-item,
         body #wrapper #header .nav .li-item {
+          border-radius: 5px;
           list-style: none;
-          width: 30%;
+          flex-grow: 2;
           transition: 0.3s;
-          background-color: orange;
-          margin: 0 2px;
-          border: 2px solid #ffb733;
-          box-shadow: 2px 2px 2px 2px #4d4d4d;
+          margin: 0 25px;
+          background-color: #e69500;
+          line-height: 50px;
+          border: 2px solid #cc8400;
+          box-shadow: 2px 2px 2px 2px #ce7a10;
           text-align: center; }
-          /* line 46, C:/wamp64/www/prove-eksamen/css/style.scss */
+          html #wrapper #header .nav .li-item a,
           body #wrapper #header .nav .li-item a {
             color: black;
             text-decoration: none; }
-          /* line 50, C:/wamp64/www/prove-eksamen/css/style.scss */
+          html #wrapper #header .nav .li-item:hover,
           body #wrapper #header .nav .li-item:hover {
-            background-color: #ffc966;
+            background-color: #f6c78b;
             transition: 0.3s; }
-    /* line 57, C:/wamp64/www/prove-eksamen/css/style.scss */
+        html #wrapper #header .nav .form-control,
+        body #wrapper #header .nav .form-control {
+          background: linear-gradient(#ee8f19, #dd8211), url(hearth-feature.jpg);
+          display: flex;
+          padding: 10px 0;
+          flex-wrap: wrap;
+          justify-content: space-around; }
+    html #wrapper .form-control,
     body #wrapper .form-control {
+      background: linear-gradient(#ee8f19, #dd8211), url(hearth-feature.jpg);
       width: 100%;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around; }
-      /* line 62, C:/wamp64/www/prove-eksamen/css/style.scss */
+      html #wrapper .form-control .username,
       body #wrapper .form-control .username {
         flex-grow: 1;
+        margin: 0 15px;
         text-align: center;
         border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-      /* line 69, C:/wamp64/www/prove-eksamen/css/style.scss */
+        box-shadow: inset 0 0 3px black;
+        line-height: 50px;
+        border-radius: 5px; }
+      html #wrapper .form-control .password,
       body #wrapper .form-control .password {
         text-align: center;
-        width: 40%;
+        flex-grow: 1;
+        margin: 0 15px;
         margin: 0 3%;
         border-radius: 5%;
         border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-      /* line 78, C:/wamp64/www/prove-eksamen/css/style.scss */
+        box-shadow: inset 0 0 3px black;
+        line-height: 50px;
+        border-radius: 5px; }
+      html #wrapper .form-control .submit,
       body #wrapper .form-control .submit {
         text-align: center;
         flex-grow: 1;
+        margin: 0 15px;
         background-color: orange;
         transition: 0.3s;
         border: 2px solid #996300;
-        box-shadow: inset 0 0 10px black;
-        line-height: 50px; }
-        /* line 86, C:/wamp64/www/prove-eksamen/css/style.scss */
+        box-shadow: inset 0 0 3px black;
+        line-height: 50px;
+        border-radius: 5px; }
+        html #wrapper .form-control .submit:hover,
         body #wrapper .form-control .submit:hover {
           transition: 0.3s;
           background-color: #ffb733; }
-    /* line 93, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .upload .username {
-      text-align: center;
-      margin: 0 3%;
-      border: 2px solid #996300;
-      box-shadow: inset 0 0 10px black;
-      line-height: 70px; }
-    /* line 100, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .upload .password {
-      text-align: center;
-      flex-grow: 1;
-      border-radius: 5%;
-      border: 2px solid #996300;
-      box-shadow: inset 0 0 10px black;
-      line-height: 50px; }
-    /* line 108, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .upload .submit {
-      text-align: center;
-      width: 40%;
-      margin: 0 3%;
-      background-color: orange;
-      transition: 0.3s;
-      border: 2px solid #996300;
-      box-shadow: inset 0 0 10px black;
-      line-height: 70px; }
-      /* line 117, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .upload .submit:hover {
+      html #wrapper .form-control .seach,
+      body #wrapper .form-control .seach {
+        text-align: center;
+        border-radius: 5%;
+        flex-grow: 2;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 10px black;
+        margin: 0 15px;
+        line-height: 50px; }
+      html #wrapper .form-control .filter,
+      body #wrapper .form-control .filter {
+        text-align: center;
+        margin: 0 15px;
         transition: 0.3s;
-        background-color: #ffb733; }
-    /* line 123, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .filter-control {
-      flex-grow: 1;
-      display: inline-block;
-      flex-wrap: wrap;
-      text-align: center;
-      margin: 0;
-      align-items: center;
-      top: 60%;
-      justify-content: space-around;
-      line-height: 50px; }
-    /* line 134, C:/wamp64/www/prove-eksamen/css/style.scss */
-    body #wrapper .articels {
+        background-color: orange;
+        border: 2px solid #996300;
+        border-radius: 5%;
+        line-height: 50px; }
+        html #wrapper .form-control .filter:hover,
+        body #wrapper .form-control .filter:hover {
+          transition: 0.3s;
+          background-color: #ffb733; }
+    html #wrapper .upload,
+    body #wrapper .upload {
+      background: linear-gradient(#e68811, #ce7a10), url(hearth-feature.jpg); }
+      html #wrapper .upload .username,
+      body #wrapper .upload .username {
+        text-align: center;
+        margin: 0 3%;
+        width: 40%;
+        border-radius: 5px;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 3px black;
+        line-height: 70px; }
+      html #wrapper .upload .password,
+      body #wrapper .upload .password {
+        text-align: center;
+        flex-grow: 1;
+        border-radius: 5px;
+        border-radius: 5%;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 3px black;
+        line-height: 50px; }
+      html #wrapper .upload .submit,
+      body #wrapper .upload .submit {
+        text-align: center;
+        border-radius: 5px;
+        width: 40%;
+        margin: 0 3%;
+        background-color: orange;
+        transition: 0.3s;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 3px black;
+        line-height: 70px; }
+        html #wrapper .upload .submit:hover,
+        body #wrapper .upload .submit:hover {
+          transition: 0.3s;
+          background-color: #ffb733; }
+    html #wrapper #main .articels,
+    body #wrapper #main .articels {
+      background: linear-gradient(#ee921e, #e18511), url(hearth-feature.jpg);
       display: flex;
       width: 100%;
-      flex-wrap: wrap;
-      justify-content: space-around; }
-      /* line 139, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .articels hr.style14 {
+      padding-top: 10px;
+      flex-wrap: wrap; }
+      html #wrapper #main .articels hr.style14,
+      body #wrapper #main .articels hr.style14 {
         border: 0;
         height: 1px;
         background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
         background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
         background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
         background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); }
-      /* line 147, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper .articels .articel {
+      html #wrapper #main .articels .articel,
+      body #wrapper #main .articels .articel {
         text-align: center;
-        border: 2px solid grey;
-        margin: 0 20px;
-        justify-content: space-between;
-        flex-grow: 1; }
-    /* line 155, C:/wamp64/www/prove-eksamen/css/style.scss */
+        background: linear-gradient(#e68811, #ce7a10), url(hearth-feature.jpg);
+        border: 1px solid #ce7a10;
+        margin: 5px 20px;
+        max-width: 30%; }
+        html #wrapper #main .articels .articel div,
+        body #wrapper #main .articels .articel div {
+          width: 98%;
+          margin: 0 auto;
+          float: left; }
+        html #wrapper #main .articels .articel p,
+        body #wrapper #main .articels .articel p {
+          text-align: left;
+          padding-left: 20px; }
+        html #wrapper #main .articels .articel img,
+        body #wrapper #main .articels .articel img {
+          max-width: 30%;
+          max-height: 30%;
+          float: right; }
+        html #wrapper #main .articels .articel .form-control,
+        body #wrapper #main .articels .articel .form-control {
+          width: 95%;
+          margin: 3px auto; }
+          html #wrapper #main .articels .articel .form-control .submit,
+          body #wrapper #main .articels .articel .form-control .submit {
+            margin: 0; }
+    html #wrapper #main,
     body #wrapper #main {
-      width: 100%;
+      background: linear-gradient(#ee921e, #e18511), url(hearth-feature.jpg);
+      width: 98%;
+      margin: 0 auto;
+      padding: 10px 0;
+      border-radius: 5px;
+      border: 1px solid black;
+      background-repeat: no-repeat;
+      background-position-y: bottom;
       margin-bottom: 70px;
-      margin-top: 20px; }
-      /* line 159, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper #main .form-control {
-        width: 100%;
-        display: flex;
-        justify-content: space-around; }
-        /* line 163, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #main .form-control .seach {
-          text-align: center;
-          border-radius: 5%;
-          flex-grow: 1;
-          border: 2px solid #996300;
-          box-shadow: inset 0 0 10px black;
-          line-height: 50px; }
-        /* line 171, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #main .form-control .filter {
-          text-align: center;
-          flex-grow: 1;
-          transition: 0.3s;
-          background-color: orange;
-          border: 2px solid #996300;
-          box-shadow: inset 0 0 10px black;
-          line-height: 50px; }
-          /* line 179, C:/wamp64/www/prove-eksamen/css/style.scss */
-          body #wrapper #main .form-control .filter:hover {
-            transition: 0.3s;
-            background-color: #ffb733; }
-      /* line 185, C:/wamp64/www/prove-eksamen/css/style.scss */
-      body #wrapper #main .classes-checkboxes-form {
-        display: flex;
-        flex-wrap: wrap;
-        flex-grow: 1;
+      margin-top: 40px;
+      box-shadow: 0 8px 6px -6px black; }
+      html #wrapper #main .submit,
+      body #wrapper #main .submit {
         text-align: center;
-        justify-content: space-around; }
-        /* line 191, C:/wamp64/www/prove-eksamen/css/style.scss */
-        body #wrapper #main .classes-checkboxes-form .classes-checkboxes {
-          flex-grow: 1;
-          font-size: 2rem; }
-  /* line 198, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body #footer {
-    background-color: #ffb733;
-    width: 100%; }
-  /* line 202, C:/wamp64/www/prove-eksamen/css/style.scss */
-  body .footer-left {
+        margin: 0 !important;
+        width: 100%;
+        background-color: orange;
+        transition: 0.3s;
+        border: 2px solid #996300;
+        box-shadow: inset 0 0 3px black;
+        line-height: 50px;
+        border-radius: 5px; }
+        html #wrapper #main .submit:hover,
+        body #wrapper #main .submit:hover {
+          transition: 0.3s;
+          background-color: #ffb733; }
+    html #wrapper .classes-checkboxes-form,
+    body #wrapper .classes-checkboxes-form {
+      background: linear-gradient(#e68811, #ce7a10), url(hearth-feature.jpg);
+      display: flex;
+      flex-wrap: wrap;
+      flex-grow: 1;
+      text-align: center;
+      justify-content: space-around; }
+      html #wrapper .classes-checkboxes-form .classes-checkboxes,
+      body #wrapper .classes-checkboxes-form .classes-checkboxes {
+        flex-grow: 1;
+        font-size: 2rem; }
+
+#footer {
+  box-shadow: 0 8px 6px -6px black;
+  width: 98%;
+  margin: 0 auto;
+  border: 2px solid black;
+  margin-bottom: 5px;
+  text-align: center; }
+  #footer .footer-left {
+    background: linear-gradient(#ee9423, #e68811), url(hearth-feature.jpg);
+    text-align: center;
     flex-wrap: wrap;
     flex-grow: 1;
     display: flex; }
+    #footer .footer-left h3 {
+      width: 100%;
+      text-align: center; }
+  #footer .form-control {
+    background-color: #F2AB52; }
 
-/* line 209, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-p {
   flex-grow: 1;
   font-family: 'Open Sans Condensed', sans-serif; }
 
-/* line 214, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-p:nth-last {
   flex-grow: 1;
   text-align: justify;
   font-family: 'Open Sans Condensed', sans-serif; }
 
-/* line 220, C:/wamp64/www/prove-eksamen/css/style.scss */
 .articel-img {
   margin: 5px; }
 
-/* line 224, C:/wamp64/www/prove-eksamen/css/style.scss */
 .upload {
   display: flex;
   width: 100%;
@@ -225,9 +281,52 @@ body {
   align-items: center;
   justify-content: space-around; }
 
-/* line 232, C:/wamp64/www/prove-eksamen/css/style.scss */
 .label {
   flex-grow: 1;
   width: 100%; }
 
-/*# sourceMappingURL=style.css.map */
+.ajax-content {
+  width: 100%; }
+  .ajax-content select {
+    width: 40%; }
+  .ajax-content #fileToUpload {
+    width: 40%; }
+
+.phoneNav {
+  display: none;
+  width: 100%;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  float: left; }
+
+@media screen and (max-width: 1200px) {
+  html body #wrapper #main .form-control {
+    padding: 0; }
+    html body #wrapper #main .form-control .seach {
+      margin-right: 0; }
+    html body #wrapper #main .form-control .filter {
+      margin: 0; }
+    html body #wrapper #main .form-control .submit {
+      margin-left: 0; }
+  .articel {
+    max-width: 100% !important; }
+  html body #wrapper #main .articels .articel {
+    width: 100vw;
+    text-align: center; }
+    html body #wrapper #main .articels .articel .articel-p {
+      text-align: left; }
+  body {
+    width: 100%; }
+  .header-bg {
+    background-size: contain !important; }
+  .filter {
+    margin-right: 0 !important; }
+  nav .submit {
+    margin-left: 0 !important; }
+  html body #wrapper #header .nav .form-control {
+    display: none; }
+  body #wrapper #header nav .phoneNav {
+    display: block; } }
+
+#fileToUpload {
+  font-size: 1rem; }
